Various tweaks to the Mail sample: - Fixed stretchy tasks on IE6. - Changed tasks and contacts to no longer use VerticalPanel. - Moved global css into a CssResource. Review by: bobv (desk check)
git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@6800 8db76d5a-ed1c-0410-87a9-c151d255dfc7

--- a/samples/mail/src/com/google/gwt/sample/mail/client/global.css
+++ b/samples/mail/src/com/google/gwt/sample/mail/client/global.css
@@ -37,7 +37,7 @@ a:link, a:visited, a:hover, a:active {
 .gwt-PopupGlass {
   background-color: #000;
   opacity: 0.3;
-  filter: alpha(opacity=30);
+  filter: literal("alpha(opacity=30)");
 }
 
 /* GWT Tree */
